<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
<RelativeLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:text="Choose a Hostname"
                android:gravity="center"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Give your Droplets an identifying name you will remember them by. Your Droplet name can only contain alphanumeric characters, dashes, and periods."
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:gravity="center"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="Enter name here"
                android:gravity="center"
                android:id="@+id/etDropletName"
                android:layout_marginBottom="16dp"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="12dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Additional Options"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:layout_margin="12dp"/>

            <CheckBox
                android:id="@+id/networkingCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Private Networking" />

            <CheckBox
                android:id="@+id/backupsCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Backups"
                />

            <CheckBox
                android:id="@+id/ipv6CheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="IPv6" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>

    <Button
        android:id="@+id/btnCreateDroplet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Create Droplet"
        android:theme="@style/resize"
        android:layout_alignParentBottom="true"
        />
</RelativeLayout>
</layout>